--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@prisma/client": "^5.7.1",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
